# Cypher-Analytics

./: CryptoUtils.py  CypherText.py  Definitions.md  README  SymmetricKeyDiversification.py  SymmetricKeyDiversificationTestVectors.txt  WeakPRG.py  mod_arithm.py
Dynamic-QRCode/: .gitignore  DataEncoding.py  Dynamic-QRCode.py  Dynamic-URL.txt  JWT-QRCode.py  QRCodeFromManualCode.py  TOPT-QRCode.py
JWT-ecdsa-attestation/: GenericAttestationPackage.py  JWTEncryption1.py  JWTEncryption2.py  SDJWTAttestation.py
Secure-UUID/: Cargo.toml
Secure-UUID/src/: main.rs
SecureGloballyUniqueIdentifier/: SecureGloballyUniqueIdentifier.py  building-ontology.jsonld
SecureWakeUpUsingBLE/: Cargo.toml
SecureWakeUpUsingBLE/src/: main.rs
SimpleKeyStore/: .gitignore  SimpleKeyStore.py
StreamCypher/: CryptoUtils.py  CypherText.py
SymmetricKeys/: DistributedKeyManagement.py  KeyWrapping.txt  SymmetricKeyDiversification.py  SymmetricKeyDiversificationTestVectors.txt  SymmetricKeyExchange.py  SymmetricKeyExchangeProtocol.py
URLSecurity/: PII_URLFragment.py
WeakPRG/: BreakPRG.py  FindMagicNumbers.py  GenericBirthDayAttack.py  IssuesWithLowEntropyInput.py
X509-Certificate-py/: x509certificate.py
X509-Certificate-rust/: Cargo.toml
X509-Certificate-rust/src/: main.rs
ecdsa-signature/: Cargo.toml
ecdsa-signature/src/: main.rs
pkcs#12/: ecdsa_key_pair.pfx  pkcs#12-KeyStore.py
test-ca/: .gitignore  README.txt  build-a-pki.sh
test-ca/ecdsa/: ca.cert  ca.der  (+16 more)
x509-ecdsa-attestation/: Cargo.toml
x509-ecdsa-attestation/src/: main.rs
x509-ecdsa-endorsement/: README.txt
(+41 files in other folders)
